# spotify-mcp

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  example_env.txt  pyproject.toml  server.py  spotify_api.py  utils.py
src/api/: __init__.py  spotify_api.py
src/config/: __init__.py
src/helpers/: __init__.py  auth_helpers.py  device_helpers.py  error_handler.py  parsers.py
src/tools/: __init__.py  devices.py  playback.py  playlists.py  search.py
