[project]
name = "spotify-mcp"
version = "0.1.0"
description = "MCP server for Spotify"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
 "mcp>=1.8.0",
 "python-dotenv>=1.0.1",
 "spotipy==2.24.0",
]

[dependency-groups]
dev = [
    "typer>=0.9.0",
]

[project.scripts]
spotify-mcp = "src.server:main"

[[project.authors]]
name = "Or Ben Harosh"
email = "orbenharoshgit@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
